--- a/StoreSite_shan/Site.Master
+++ b/StoreSite_shan/Site.Master
@@ -48,7 +48,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	 <div class="header_bottom-box">
 		<div class="header_bottom_left">
 			<div class="logo">
-				<a href="index.html"><h1>MEADOWS EXPRESS</h1></a>
+				<a href="index.html"><h1>MEADOW EXPRESS</h1></a>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
@@ -61,8 +61,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="menu_box">
 	     <ul class="megamenu skyblue">
 			<li class="active grid"><a class="color2" href="index.html">Home</a></li>
-			<li><a class="color4" href="men.html">Special</a></li>				
-			<li><a class="color10" href="#">Promoions</a>
+			<li><a class="color4" href="men.html">Best Sellers</a></li>				
+			<li><a class="color10" href="#">Promotions</a>
 				<%--<div class="megapanel">
 					<div class="row">
 						<div class="col1">
@@ -219,7 +219,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					  </div>
 					</div>--%>
 			</li>
-			<li><a class="color8" href="blog.html">Blog</a></li>
+			<%--<li><a class="color8" href="blog.html">Blog</a></li>--%>
 			<div class="clearfix"> </div>
 		 </ul>
 	  </div>
@@ -243,7 +243,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <div class="box2">
 			 	<ul class="list1">
 			 		<i class="lock"> </i>
-			 		<li class="list1_right"><p>Upto 5% Reward on your shipping</p></li>
+			 		<li class="list1_right"><p>Amazing Value Locally</p></li>
 			 		<div class="clearfix"> </div>
 			 	</ul>
 			 </div>
@@ -252,7 +252,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <div class="box3">
 			 	<ul class="list1">
 			 		<i class="clock1"> </i>
-			 		<li class="list1_right"><p>Easy Extended Returned</p></li>
+			 		<li class="list1_right"><p>Improved product range</p></li>
 			 		<div class="clearfix"> </div>
 			 	</ul>
 			 </div>
@@ -261,7 +261,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <div class="box4">
 			 	<ul class="list1">
 			 		<i class="vehicle"> </i>
-			 		<li class="list1_right"><p>Free Shipping on order over 99 $</p></li>
+			 		<li class="list1_right"><p>Best availability for products</p></li>
 			 		<div class="clearfix"> </div>
 			 	</ul>
 			 </div>
@@ -270,7 +270,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <div class="box5">
 			 	<ul class="list1">
 			 		<i class="dollar"> </i>
-			 		<li class="list1_right"><p>Delivery Schedule Spread Cheer Time</p></li>
+			 		<li class="list1_right"><p>Best value for money</p></li>
 			 		<div class="clearfix"> </div>
 			 	</ul>
 			 </div>
@@ -278,8 +278,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="clearfix"> </div>
 		</div>
 		<div class="column_center">
-			<h1>1 of the most Beautiful online store </h1>
-			<h2>Clothes is one of the word'd leading E-commerce companies that designs and develops online stores</h2>
+			<h1>Welcome to Meadow Express Store</h1>
 		</div>
 		<div class="sellers_grid">
 			<ul class="sellers">
@@ -291,11 +290,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="grid_2">
 			<div class="col-md-3 span_6">
 			  <div class="box_inner">
-				<img src="images/p1.jpg" class="img-responsive" alt=""/>
+				<img src="images/b1.jpg" class="img-responsive" alt=""/>
 				 <div class="sale-box"> </div>
 				 <div class="desc">
 				 	<h3>Ullamcorper suscipit</h3>
-				 	<h4>178,90 $</h4>
+				 	<h4>£2.90</h4>
 				 	<ul class="list2">
 				 	  <li class="list2_right"><span class="m_2"><a href="#" class="link1">See More</a></span></li>
 				 	  <div class="clearfix"> </div>
@@ -306,11 +305,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-md-3 span_6">
 			  <div class="box_inner">
-				<img src="images/p2.jpg" class="img-responsive" alt=""/>
+				<img src="images/b5.jpg" class="img-responsive" alt=""/>
 				 <div class="sale-box"> </div>
 				 <div class="desc">
 				 	<h3>Ullamcorper suscipit</h3>
-				 	<h4>178,90 $</h4>
+				 	<h4>£4.90</h4>
 				 	<ul class="list2">
 				 	  <li class="list2_right"><span class="m_2"><a href="#" class="link1">See More</a></span></li>
 				 	  <div class="clearfix"> </div>
@@ -321,11 +320,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-md-3 span_6">
 			  <div class="box_inner">
-				<img src="images/p3.jpg" class="img-responsive" alt=""/>
+				<img src="images/b3.jpg" class="img-responsive" alt=""/>
 				 <div class="sale-box"> </div>
 				 <div class="desc">
 				 	<h3>Ullamcorper suscipit</h3>
-				 	<h4>178,90 $</h4>
+				 	<h4>£5.99</h4>
 				 	<ul class="list2">				 	  
 				 	  <li class="list2_right"><span class="m_2"><a href="#" class="link1">See More</a></span></li>
 				 	  <div class="clearfix"> </div>
@@ -336,11 +335,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-md-3 span_6">
 			  <div class="box_inner">
-				<img src="images/p4.jpg" class="img-responsive" alt=""/>
+				<img src="images/b4.jpg" class="img-responsive" alt=""/>
 				 <div class="sale-box"> </div>
 				 <div class="desc">
 				 	<h3>Ullamcorper suscipit</h3>
-				 	<h4>178,90 $</h4>
+				 	<h4>£1.25</h4>
 				 	<ul class="list2">				 	
 				 	  <li class="list2_right"><span class="m_2"><a href="#" class="link1">See More</a></span></li>
 				 	  <div class="clearfix"> </div>
@@ -360,23 +359,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<li class="promote_head"><h3>Promotions</h3></li>
 		</ul>
 		 <ul id="flexiselDemo3">
-						<li><img src="images/n1.jpg"  class="img-responsive" /><div class="grid-flex"><h4>Contrary to popular </h4><p>589,90 $</p>
+						<li><img src="images/b1.jpg"  class="img-responsive" /><div class="grid-flex"><h4>Contrary to popular </h4><p>£3.90</p>
 							<div class="m_3"><a href="#" class="m_2">More</a></div>
 							<div class="ticket"> </div>
 						</div></li>
-						<li><img src="images/n2.jpg"  class="img-responsive" /><div class="grid-flex"><h4>Contrary to popular </h4><p>589,90 $</p>
+						<li><img src="images/b2.jpg"  class="img-responsive" /><div class="grid-flex"><h4>Contrary to popular </h4><p>£3.90</p>
 							<div class="m_3"><a href="#" class="m_2">More</a></div>
 							<div class="ticket"> </div>
 						</div></li>
-						<li><img src="images/n3.jpg"  class="img-responsive" /><div class="grid-flex"><h4>Contrary to popular </h4><p>589,90 $</p>
+						<li><img src="images/b3.jpg"  class="img-responsive" /><div class="grid-flex"><h4>Contrary to popular </h4><p>£3.90</p>
 							<div class="m_3"><a href="#" class="m_2">More</a></div>
 							<div class="ticket"> </div>
 						</div></li>
-						<li><img src="images/n4.jpg"  class="img-responsive" /><div class="grid-flex"><h4>Contrary to popular </h4><p>589,90 $</p>
+						<li><img src="images/b4.jpg"  class="img-responsive" /><div class="grid-flex"><h4>Contrary to popular </h4><p>£3.90</p>
 							<div class="m_3"><a href="#" class="m_2">More</a></div>
 							<div class="ticket"> </div>
 						</div></li>
-						<li><img src="images/n5.jpg"  class="img-responsive" /><div class="grid-flex"><h4>Contrary to popular </h4><p>589,90 $</p>
+						<li><img src="images/b5.jpg"  class="img-responsive" /><div class="grid-flex"><h4>Contrary to popular </h4><p>£3.90</p>
 							<div class="m_3"><a href="#" class="m_2">More</a></div>
 							<div class="ticket"> </div>
 						</div></li>
@@ -416,10 +415,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     	<div class="col-md-3 span_1">
     	  <ul class="spinner">
 			 <i class="box_icon"> </i>
-			 <li class="spinner_head"><h3>mazim pla</h3></li>
+			 <li class="spinner_head"><h3>Our Store</h3></li>
 			 <div class="clearfix"> </div>
 		  </ul>
-		  <img src="images/t8.jpg" class="img-responsive" alt=""/>
+		  <img src="images/MExpress.jpg" class="img-responsive" alt=""/>
     	</div>
     	<div class="col-md-3 span_1">
     	  <ul class="spinner">
@@ -432,7 +431,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     	<div class="col-md-3 span_1">
     	  <ul class="spinner">
 			 <i class="mail"> </i>
-			 <li class="spinner_head"><h3>Contact Us</h3></li>
+			 <li class="spinner_head"><h3>Follow Us</h3></li>
 			 <div class="clearfix"> </div>
 		  </ul>
 		 <ul class="social">
@@ -449,10 +448,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <li class="spinner_head"><h3>Contact Us</h3></li>
 			 <div class="clearfix"> </div>
 		  </ul>
-		  <p>500 Lorem Ipsum Dolor Sit,</p>
-		  <p>22-56-2-9 Sit Amet, Lorem,</p>
-		  <p>Phone:(00) 222 666 444</p>
-		  <p><a href="mailto:info@demo.com"> info(at)gifty.com</a></p>
+		  <p>97 The Meadows Wrexham, </p>
+		  <p>Clwyd LL11 4TJ,</p>
+		  <p>Phone:01978 751454</p>
+		  <p><a href="mailto:info@demo.com"> info(at)domain.com</a></p>
     	</div>
     	<div class="clearfix"> </div>
     </div>
@@ -461,14 +460,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		&nbsp;<ul class="footer_nav">
 		  <li><a href="#">Home</a></li>
-		  <li><a href="#">Blog</a></li>
-		  <li><a href="#">Shop</a></li>
-		  <li><a href="#">Media</a></li>
-		  <li><a href="#">Features</a></li>
+		  <li><a href="#">Best Sellers</a></li>
+		  <li><a href="#">Promotions</a></li>
 		  <li><a href="#">About Us</a></li>
 		  <li><a href="contact.html">Contact Us</a></li>
 		</ul>
-		<p class="copy">Copyright&copy; 2015 Template by <a href="http://w3layouts.com" target="_blank"> w3layouts</a></p>
+		<p class="copy">Copyright&copy; 2015 Web Site by <a href="http://mywebsite-18.apphb.com" target="_blank">Dilan Jayawardene</a></p>
 	</div>
 </div>
     </form>
